--- a/environment.yml
+++ b/environment.yml
@@ -1,175 +1,16 @@
 name: gp_project_env
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - _openmp_mutex=4.5
-  - affine=2.4.0
-  - appnope=0.1.4
-  - asttokens=3.0.1
-  - attrs=25.4.0
-  - blosc=1.21.6
-  - branca=0.8.2
-  - brotli=1.2.0
-  - brotli-bin=1.2.0
-  - brotli-python=1.2.0
-  - bzip2=1.0.8
-  - c-ares=1.34.5
-  - ca-certificates=2025.11.12
-  - certifi=2025.11.12
-  - cffi=2.0.0
-  - charset-normalizer=3.4.4
-  - click=8.3.1
-  - click-plugins=1.1.1.2
-  - cligj=0.7.2
-  - comm=0.2.3
-  - contourpy=1.3.2
-  - cycler=0.12.1
-  - debugpy=1.8.17
-  - decorator=5.2.1
-  - exceptiongroup=1.3.1
-  - executing=2.2.1
-  - folium=0.20.0
-  - fonttools=4.61.0
-  - freetype=2.14.1
-  - freexl=2.0.0
-  - geopandas=1.1.1
-  - geopandas-base=1.1.1
-  - geos=3.14.0
-  - geotiff=1.7.4
-  - giflib=5.2.2
-  - h2=4.3.0
-  - hpack=4.1.0
-  - hyperframe=6.1.0
-  - icu=75.1
-  - idna=3.11
-  - importlib-metadata=8.7.0
-  - ipykernel=7.1.0
-  - ipython=8.37.0
-  - jedi=0.19.2
-  - jinja2=3.1.6
-  - joblib=1.5.2
-  - json-c=0.18
-  - jupyter_client=8.6.3
-  - jupyter_core=5.9.1
-  - kiwisolver=1.4.9
-  - krb5=1.21.3
-  - lcms2=2.17
-  - lerc=4.0.0
-  - libarchive=3.8.2
-  - libblas=3.11.0
-  - libbrotlicommon=1.2.0
-  - libbrotlidec=1.2.0
-  - libbrotlienc=1.2.0
-  - libcblas=3.11.0
-  - libcurl=8.17.0
-  - libcxx=21.1.7
-  - libdeflate=1.24
-  - libedit=3.1.20250104
-  - libev=4.33
-  - libexpat=2.7.3
-  - libffi=3.5.2
-  - libfreetype=2.14.1
-  - libfreetype6=2.14.1
-  - libgcc=15.2.0
-  - libgdal-core=3.10.3
-  - libgfortran=15.2.0
-  - libgfortran5=15.2.0
-  - libiconv=1.18
-  - libjpeg-turbo=3.1.2
-  - libkml=1.3.0
-  - liblapack=3.11.0
-  - liblzma=5.8.1
-  - libnghttp2=1.67.0
-  - libopenblas=0.3.30
-  - libpng=1.6.51
-  - librttopo=1.1.0
-  - libsodium=1.0.20
-  - libspatialite=5.1.0
-  - libsqlite=3.51.1
-  - libssh2=1.11.1
-  - libtiff=4.7.1
-  - libwebp-base=1.6.0
-  - libxcb=1.17.0
-  - libxml2=2.15.1
-  - libxml2-16=2.15.1
-  - libxml2-devel=2.15.1
-  - libzlib=1.3.1
-  - llvm-openmp=21.1.7
-  - lz4-c=1.10.0
-  - lzo=2.10
-  - mapclassify=2.8.1
-  - markupsafe=3.0.3
-  - matplotlib-base=3.10.8
-  - matplotlib-inline=0.2.1
-  - minizip=4.0.10
-  - munkres=1.1.4
-  - ncurses=6.5
-  - nest-asyncio=1.6.0
-  - networkx=3.4.2
-  - numpy=2.2.6
-  - openjpeg=2.5.4
-  - openssl=3.6.0
-  - packaging=25.0
-  - pandas=2.3.3
-  - parso=0.8.5
-  - pcre2=10.46
-  - pexpect=4.9.0
-  - pickleshare=0.7.5
-  - pillow=12.0.0
-  - pip=25.3
-  - platformdirs=4.5.1
-  - proj=9.6.2
-  - prompt-toolkit=3.0.52
-  - psutil=7.1.3
-  - pthread-stubs=0.4
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.3
-  - pycparser=2.22
-  - pygments=2.19.2
-  - pyogrio=0.11.0
-  - pyparsing=3.2.5
-  - pyproj=3.7.1
-  - pysocks=1.7.1
-  - python=3.10.19
-  - python-dateutil=2.9.0.post0
-  - python-tzdata=2025.2
-  - python_abi=3.10
-  - pytz=2025.2
-  - pyzmq=27.1.0
-  - qhull=2020.2
-  - rasterio=1.4.3
-  - readline=8.2
-  - requests=2.32.5
-  - rioxarray=0.19.0
-  - scikit-learn=1.7.2
-  - scipy=1.15.2
-  - setuptools=80.9.0
-  - shapely=2.1.2
-  - six=1.17.0
-  - snappy=1.2.2
-  - snuggs=1.4.7
-  - sqlite=3.51.1
-  - stack_data=0.6.3
-  - threadpoolctl=3.6.0
-  - tk=8.6.13
-  - tornado=6.5.2
-  - traitlets=5.14.3
-  - typing_extensions=4.15.0
-  - tzdata=2025b
-  - unicodedata2=17.0.0
-  - uriparser=0.9.8
-  - urllib3=2.5.0
-  - wcwidth=0.2.14
-  - wheel=0.45.1
-  - xarray=2025.6.1
-  - xerces-c=3.2.5
-  - xorg-libxau=1.0.12
-  - xorg-libxdmcp=1.1.5
-  - xyzservices=2025.11.0
-  - zeromq=4.3.5
-  - zipp=3.23.0
-  - zlib=1.3.1
-  - zlib-ng=2.3.2
-  - zstandard=0.25.0
-  - zstd=1.5.7
+  - python=3.10
+  - pip
+  - numpy
+  - geopandas
+  - rasterio
+  - scikit-learn
+  - matplotlib-base
+
+  # notebook
+  - ipykernel
+  - ipython
+  - jupyterlab
