--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
-name: gp_project_env
+name: geosimpleclassify_env
 channels:
   - conda-forge
 dependencies:
   - python=3.10
   - pip
   - numpy
+  - pandas
   - geopandas
   - rasterio
   - scikit-learn
